--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
   	<meta charset="utf-8">
-  	<meta name="description" content="Annual review from the New Economics Foundation">
+  	<meta name="description" content="Annual Review from the New Economics Foundation">
   	<meta name="keywords" content="annual, review, NEF">
 		<meta name="viewport" content="width=375, initial-scale=1">
 		<meta property="og:image" content="http://rosshaig.github.io/nef-review/images/welcome-2015.jpg" />
